fix word-wrap and word-wrap-all

--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1803,6 +1803,23 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .pre { white-space: pre; }
 /*
 
+  WORD BREAK
+
+   Base:
+     word = word-break
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
+
+*/
+.word-normal { word-break: normal; }
+.word-wrap-all { word-break: break-all; }
+.word-wrap { word-break: break-word; }
+.word-nowrap { word-break: keep-all; }
+/*
+
    VERTICAL ALIGN
 
    Media Query Extensions:
@@ -2447,6 +2464,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .ws-normal-ns { white-space: normal; }
  .nowrap-ns { white-space: nowrap; }
  .pre-ns { white-space: pre; }
+ .word-normal-ns { word-break: normal; }
+ .word-wrap-all-ns { word-break: break-all; }
+ .word-wrap-ns { word-break: break-word; }
+ .word-nowrap-ns { word-break: keep-all; }
  .v-base-ns { vertical-align: baseline; }
  .v-mid-ns { vertical-align: middle; }
  .v-top-ns { vertical-align: top; }
@@ -2870,6 +2891,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .ws-normal-m { white-space: normal; }
  .nowrap-m { white-space: nowrap; }
  .pre-m { white-space: pre; }
+ .word-normal-m { word-break: normal; }
+ .word-wrap-all-m { word-break: break-all; }
+ .word-wrap-m { word-break: break-word; }
+ .word-nowrap-m { word-break: keep-all; }
  .v-base-m { vertical-align: baseline; }
  .v-mid-m { vertical-align: middle; }
  .v-top-m { vertical-align: top; }
@@ -3293,6 +3318,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
  .ws-normal-l { white-space: normal; }
  .nowrap-l { white-space: nowrap; }
  .pre-l { white-space: pre; }
+ .word-normal-l { word-break: normal; }
+ .word-wrap-all-l { word-break: break-all; }
+ .word-wrap-l { word-break: break-word; }
+ .word-nowrap-l { word-break: keep-all; }
  .v-base-l { vertical-align: baseline; }
  .v-mid-l { vertical-align: middle; }
  .v-top-l { vertical-align: top; }
