--- a/src/_word-break.css
+++ b/src/_word-break.css
@@ -13,24 +13,28 @@
 */
 
 .word-normal { word-break: normal; }
-.word-wrap { word-break: break-all; }
+.word-wrap-all { word-break: break-all; }
+.word-wrap { word-break: break-word; }
 .word-nowrap { word-break: keep-all; }
 
 @media (--breakpoint-not-small) {
   .word-normal-ns { word-break: normal; }
-  .word-wrap-ns { word-break: break-all; }
+  .word-wrap-all-ns { word-break: break-all; }
+  .word-wrap-ns { word-break: break-word; }
   .word-nowrap-ns { word-break: keep-all; }
 }
 
 @media (--breakpoint-medium) {
   .word-normal-m { word-break: normal; }
-  .word-wrap-m { word-break: break-all; }
+  .word-wrap-all-m { word-break: break-all; }  
+  .word-wrap-m { word-break: break-word; }
   .word-nowrap-m { word-break: keep-all; }
 }
 
 @media (--breakpoint-large) {
   .word-normal-l { word-break: normal; }
-  .word-wrap-l { word-break: break-all; }
+  .word-wrap-all-l { word-break: break-all; }
+  .word-wrap-l { word-break: break-word; }
   .word-nowrap-l { word-break: keep-all; }
 }
 
